413 plus small taMisc changes

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,34 +1,25 @@
-Graphing 
+PLUGINS
 
-NEED TO TEST
-* AxisSpec, ColSpec, GraphSpec notifications on changes 
+Build Includes, and folders
 
-BUGS
-* when doing UAE's, need to redraw the graphs (only rebuilding, not redrawing)
-* 3D color bar placement
-
-HI PRI
-* raster mode
-* multiple graphlets
-
-LO PRI
-* click captions (click to get box with text of values at nearest line)
-* permit simple setting of the axis for the column
-* border between GB's
-* GB check box paint area spills over onto axis area (when no button)
-
-
-taDataView/T3DataView
-
-* concept of "clear" is wrong -- shouldn't delete the node_so in data views
-* poor factoring between ta and T3, leads to need to test for par class type
-  in many T3 contexts (ex. see GraphViews::Clear_impl)
+* user plugins will need to include from the system folder
+  OR will need to have their own complete copy of the system
+  .pre include files
   
-  
-GENERAL
+Configure
 
-* need a user-friendly Color Gui picker for edit dialogs (instead/in addition to
-  the manual r/g/b) -- edit gui should show color, not just the rgb values
+* need to get:
+  variant (mpi, etc.)
+  version (4.0.2 etc.)
+  
+Build
+
+Install
+
+Dependencies
+
+* when configure changes, we really want to invalidate all the deps,
+  so that the plugins rebuild
   
 WIZARD
 
