--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -12,9 +12,9 @@ commit:
 
 --------------------
 Other Algorithms:
-  * cs: Trial_UpdatePhases, compute maxda, tie in to stats, fix biasspec ptr on unitspec
-
-, rbp? (rbp requires time stuff -- probably not worth it).  maybe apbp?
+  * cs: blowing up after weights change!  netwview dissappears
+  * add tags to (cs, so, bp!)!!
+  * rbp? (rbp requires time stuff -- probably not worth it).  maybe apbp?
 
 ------------
 current:
