got rid of superfluous dependency on SNcLayer -- Da layer can provide da for matrix layers as well as everyone else.

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -12,9 +12,11 @@ commit:
 
 --------------------
 Other Algorithms:
-  * cs: blowing up after weights change!  netwview dissappears
-  * add tags to (cs, so, bp!)!!
-  * rbp? (rbp requires time stuff -- probably not worth it).  maybe apbp?
+  * rbp -- at least support all process functions in network
+  * cs -- check import of cs_det project in demo
+  * cs -- support non-deterministic mode -- just basic boltz: no maxda + sampling +
+    uae check on cycle params
+    stuff in terms of input patterns, etc
 
 ------------
 current:
