optimization in imgproc for scaling: does crop prior to scale for scale factors > 1.3 also minor guards in places that crashed on me while tooling around.

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -17,6 +17,12 @@ Other Algorithms:
 ------------
 current:
 
+* Duplicate project (455)
+
+* mult #EXT (ticket)
+
+* convert old file: cancel doesn't work!
+
 * projection from should be a smartref, not a raw pointer!!  also, copy of it seems
 to not update the from display field..
 
