this should fail

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+the change in spain
 The PDP++ software was originally written by Randall C. O'Reilly (now at Department of Psychology, University of Colorado Boulder), Chadley K. Dawson, and James L. McClelland, under the affiliation of the following entities:
 
     * Carnegie Mellon University
