made netview ctrl panel more compact (got rid of GroupBox) and vastly simplified PVLV and PBWM wizards -- more to do on that + testing.

--- a/src/emergent/leabra/TODO
+++ b/src/emergent/leabra/TODO
@@ -2,6 +2,7 @@ leabra todo list:
 
 commit:
 
+* fix PBWM & PVLV wizards & add funs to create/remove prjns into PVLV layers..
 
 ------------
 current:
