* Major bug fix in css: dynamic enums were not encapsulated in the cssProgSpace (i.e., local to the Program where they were defined) (even though the enum type itself was localized to local types, the enum values were being registered on the global list!  ack!)  The result is enum collisions.  Thanks to Tom Hazy for finding this one! * Also did longstanding fix of source code management in css -- it is all now contained and managed by the cssProgSpace instead of the cssProg objects -- much much cleaner and list command etc actually works now! * Also fix for SetCurLrate in Leabra -- now done on Prjn instead of recv con group much more efficient.

--- a/src/emergent/leabra/TODO
+++ b/src/emergent/leabra/TODO
@@ -47,23 +47,13 @@ function for whenever a variable is processed..
 
 == Graph
 
+* 3d bars & filled bars
 * logarithmic units on axis
 
----
-
------------
-check:
-
 ------------------
-Program issues
+Program/css issues
 
---------------
-
-* p ((v1 > 0.0) ? (1.0 / v1): 0.0) : gives a div0 error -- should not!
-* css #include: make a new codeblock and put all the include stuff in there,
-   to get rid of zaplast?  how to best handle?
-* css listing is still lame.  maybe just have completely separate global text list, 
-  with pointers into that?
+* css: p ((v1 > 0.0) ? (1.0 / v1): 0.0) : gives a div0 error -- should not!
 
 ------------------
 hv model
