emacs cut/copy/paste

--- a/reference_card/emergentreference.tex
+++ b/reference_card/emergentreference.tex
@@ -95,8 +95,11 @@
 \verb!Ctrl+d!  & Delete selected item(s). \\
 \verb!Delete!  & Delete selected item(s). \\
 \verb!Ctrl+c!  & Copy selected element(s). \\
+\verb!Alt+w!  & Copy selected element(s). \\
 \verb!Ctrl+x!  & Cut selected element(s). \\
+\verb!Ctrl+w!  & Cut selected element(s). \\
 \verb!Ctrl+v!  & Paste element(s). \\
+\verb!Ctrl+y!  & Paste element(s). \\
 \verb!Ctrl+u!  & Page up. \\
 \verb!Ctrl+v!  & Page down. \\
 \verb!Ctrl+g!  & Deselect. \\
