add section for console/text area keyboard shortcuts

--- a/reference_card/emergentreference.tex
+++ b/reference_card/emergentreference.tex
@@ -106,6 +106,25 @@
 \verb!Esc!  & Deselect.
 \end{tabular}
 
+\subsection{Console and text fields}
+\includegraphics[width=108.5px]{console.png} \\
+\begin{tabular}{@{}ll@{}}
+\verb!Ctrl+l!    & Clear console buffer history. \\
+\verb!Ctrl+l!    & Delete highlighted text. \\
+\verb!Ctrl+a!    & Beginning of line. \\
+\verb!Ctrl+e! & End of line. \\
+\verb!Ctrl+k! & Kill text until end of line. \\
+\verb!Ctrl+b!  & Move cursor back one character. \\
+\verb!Ctrl+f! & Move cursor forward one character. \\
+\verb!Ctrl+right! & Move cursor one word forward. \\
+\verb!Ctrl+left! & Move cursor one word backwards. \\
+\verb!Ctrl+shift+right! & Highlight one word forward. \\
+\verb!Ctrl+shift+left! & Highlight one word backwards. \\
+\verb!Ctrl+x! & Cut. \\
+\verb!Ctrl+c! & Copy. \\
+\verb!Ctrl+v! & Paste.
+\end{tabular}
+
 \subsection{New elements in left tree browser}
 \includegraphics[width=66px]{treebrowser.png} \\
 \begin{tabular}{@{}ll@{}}
